// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jiugong v6 server engine > matches every legacy field for 'compound surname' 1`] = `
{
  "actionDesc": "",
  "actionRel": "金平金",
  "ageStar": "驿马星(奔驰星)",
  "ageStarDesc": "长程奔波，动态工作",
  "ageStarFull": "驿马星（奔驰星）：掌管奔驰、忙碌。与车星不同的是它是跑长程的，甚而漂洋过海，比较稳定持续地跑。若驿马星出现则人之元神会有外游的感应，若逢事业工作是动态的则不易疲惫。长程奔波，动态工作。",
  "day": 20,
  "di": 27,
  "diWx": "金",
  "energyFull": {
    "临官": "扩大发展，主动运。发展期，忙碌升官，扩张事业版图。动力十足，创业升官看基础。这一年适合积极进取、扩大影响力，但需注意打好基础再行动。",
    "养": "吸收期，根基成长，积累培养。防投机取巧。养得助力在人际，长生贵人生两地。这一阶段需要沉淀和蓄力，为后面的突破做准备。",
    "冠带": "发挥本质最大，主动运。成熟期，自我表现，成名上位，但有抗性。这是能量最强的主动运之一，适合展现个人魅力与能力，但需注意不要过于高调而招致反弹。",
    "帝旺": "巅峰期，能量最强也最乱。高亢天助，防贪防傲。这是能量周期的顶点，最强大的运程，但也是容易失控的时期。若是帝旺还负债，后运滚滚筑高台。",
    "死": "破灭期，终止停顿，不宜妄动。脆弱易碎，外地贵人，放下执念。看似最差的运程，但死也意味着旧的事物终结，为新开始腾出空间。",
    "病": "病变期，变化与乱，需谨慎。波折考验，冷静检查。这一年容易出现各种小问题和不顺利，需要格外谨慎。身体和事业都需要定期"体检"。",
    "绝": "谷底期，空窗空洞，等待时机。结束重生，新的开始。这是能量最低点，也是转机的前夜。不宜做任何重大决策，静待时来运转。",
    "胎": "酝酿期，谷底被动，新想法萌生。新的起点，一切刚刚开始。胎是谷底也是转机，一切变量九宫管。这个时候适合学习和积累，不要急于求成。",
    "衰": "倦怠期，回收守成，防变防换。守住退守，被动运。这一年不宜大动作，适合回收整理、稳固已有成果。守成为主，不可轻举妄动。",
    "长生": "成长期，突破期，被动运。贵人相助，人和行动。这是新一轮上升的开始，适合积极行动，把握人际关系带来的机会。",
  },
  "groups": [
    {
      "ages": "1-9岁",
      "count": 9,
      "name": "巅峰运",
    },
    {
      "ages": "10-18岁",
      "count": 9,
      "name": "靠山运",
    },
    {
      "ages": "19-27岁",
      "count": 9,
      "name": "打拼运",
    },
    {
      "ages": "28-36岁",
      "count": 9,
      "name": "小得运",
    },
    {
      "ages": "37-45岁",
      "count": 9,
      "name": "追击运",
    },
    {
      "ages": "46-54岁",
      "count": 9,
      "name": "专注运",
    },
    {
      "ages": "55-63岁",
      "count": 9,
      "name": "虚名运",
    },
    {
      "ages": "64-72岁",
      "count": 9,
      "name": "功名运",
    },
    {
      "ages": "73-81岁",
      "count": 9,
      "name": "组织运",
    },
    {
      "ages": "82-90岁",
      "count": 9,
      "name": "回收运",
    },
  ],
  "ju": 3,
  "juDesc": "士农工商皆通，用心惜福",
  "juFull": "【口诀】不知前世是何物？投胎来此得福禄。士农工商我皆通，但求用心和惜福。

今生前程发展的指标是上辈子修来的福报，机会与发展都比别人顺利一些，不管是求功名、官途、专业技术或者生产工作职场上发展和经商，你都可以行得通；唯一该注意的是不管做任何事都要很用心，并且对于提拔造就你的人要懂得回馈和惜福（懂得迎合上意）。

局差三者，一辈子的路一定有人安排。若要问局差几最好命？大概就是差三的。不过好命的人通常也懒惰，只要懂得珍惜，才不会枉费差三的好命格局。这也可以当老板。

总结：局3的人最要处理好人际关系，另外就是要坚持；成就就容易。",
  "lowerEnergy": "长生",
  "lowerGua": "入库长生",
  "lowerQi": "入库",
  "lowerStrategy": "跟随既有资源",
  "mainFunc": "副功能",
  "mainFuncDesc": "善用头脑、人际关系、机会点，需要合作不能独闯",
  "mainNum": 6,
  "marriage": "双象",
  "marriageDesc": "势均力敌",
  "mgtDesc": "迅雷型管理",
  "mgtFull": "管理指数甚高（80分），排名第三。管理细胞再生速度很快，像肝细胞一样可以再生。在管理上很容易进入状况，并且有多重变化。迅雷式的管理风格——让人有雷厉风行的感觉。是唯一可以接受行动功能呈阳性反应者的一型。名人：曹操、毛泽东。",
  "mgtScore": 80,
  "mgtType": "急风型",
  "month": 1,
  "name": "欧阳修文",
  "outerEnergy": "胎",
  "outerGua": "争夺胎",
  "outerQi": "争夺",
  "outerStrategy": "需上层支持",
  "ren": 27,
  "renWx": "金",
  "selfEnergy": "长生",
  "selfGua": "入库长生",
  "selfQi": "入库",
  "selfStrategy": "跟随既有资源",
  "thinkDesc": "",
  "thinkRel": "金克土",
  "tian": 26,
  "tianWx": "土",
  "total": 39,
  "upperEnergy": "冠带",
  "upperGua": "升格冠带",
  "upperQi": "升格",
  "upperStrategy": "积极表现",
  "wai": 12,
  "wealthPalace": "库平",
  "wealthPalaceDesc": "从商格，说话婉转",
  "wealthPath": "局平（名气暗财型）：靠专业成名",
  "wxActionFull": "",
  "wxThinkFull": "",
  "xiangStrategy": {
    "争夺": {
      "caution": "能力见真章，竞争激烈",
      "lower": "奖惩分明防挖角",
      "outer": "守好基本盘再扩张",
      "self": "能力被考验",
      "upper": "需上层支持",
    },
    "享成": {
      "caution": "最忌得意忘形",
      "lower": "大方分享凝聚人心",
      "outer": "巩固合作关系",
      "self": "犒赏自己",
      "upper": "感恩回报",
    },
    "付出": {
      "caution": "放弃则前功尽弃",
      "lower": "短期看不到回报",
      "outer": "多付出少计较",
      "self": "不要放弃",
      "upper": "付出不求回报",
    },
    "入库": {
      "caution": "守成为上，不宜冒进",
      "lower": "给下属安全感",
      "outer": "维护老客户",
      "self": "守住老本不宜开创",
      "upper": "跟随既有资源",
    },
    "升格": {
      "caution": "升格也招嫉妒，注意人际",
      "lower": "栽培人才",
      "outer": "适宜谈判签约",
      "self": "提升自身层级",
      "upper": "积极表现",
    },
    "名望": {
      "caution": "名望双刃剑，忌骄傲",
      "lower": "以身作则",
      "outer": "建立口碑",
      "self": "打造个人品牌",
      "upper": "展现专业",
    },
    "开拓": {
      "caution": "不可冲太快，稳中求进",
      "lower": "激团队士气",
      "outer": "拓展新合作",
      "self": "开拓新领域",
      "upper": "获授权大胆前进",
    },
    "晦暗": {
      "caution": "容易被误导，高调必有是非",
      "lower": "多关心少强求",
      "outer": "不熟领域别碰",
      "self": "反思学习",
      "upper": "不宜主动请缨",
    },
    "转变": {
      "caution": "前五年经营决定转好转坏，不可独闯",
      "lower": "引导下属适应变化",
      "outer": "合作关键转折点",
      "self": "抛弃旧包袱扭转乾坤",
      "upper": "跟上沟通转型方向",
    },
  },
  "xingyunFull": "要在混乱中求成长，在短利暴发中容易杀出重围，一生中遇到越乱的环境越有机会。事业与家庭需谨慎平衡，过度侧重一方可能带来关系紧张。持续守业是必修课程。财气强，附加价值高。",
  "xingyunName": "短发星",
  "xuAge": 26,
  "year": 2001,
  "years": [
    {
      "age": 1,
      "chance": "名望",
      "gua": "登峰",
      "jiedu": "最好的运，看你成就水平",
      "koujue": "登峰谦卑可造极 求名得名利得利",
      "year": 2001,
      "yun": "帝旺",
    },
    {
      "age": 2,
      "chance": "入库",
      "gua": "忌贪",
      "jiedu": "不可贪心",
      "koujue": "有气无力节节退 贪得无厌必自毁",
      "year": 2002,
      "yun": "衰",
    },
    {
      "age": 3,
      "chance": "升格",
      "gua": "图利",
      "jiedu": "可激流勇退变现",
      "koujue": "原封不动难相处 转变必有利可图",
      "year": 2003,
      "yun": "病",
    },
    {
      "age": 4,
      "chance": "开拓",
      "gua": "野心",
      "jiedu": "关键卦，横向跨界要慢",
      "koujue": "鹊巢易主鸠来占 野心勃勃速难成",
      "year": 2004,
      "yun": "死",
    },
    {
      "age": 5,
      "chance": "转变",
      "gua": "过时",
      "jiedu": "没机会了可转移",
      "koujue": "飞龙在天已过时 再闯天关必有失",
      "year": 2005,
      "yun": "绝",
    },
    {
      "age": 6,
      "chance": "晦暗",
      "gua": "求藏",
      "jiedu": "主动退下来低调",
      "koujue": "昏天暗地事难解 求藏容易求脱难",
      "year": 2006,
      "yun": "胎",
    },
    {
      "age": 7,
      "chance": "享成",
      "gua": "赐福",
      "jiedu": "可赐福不可解难",
      "koujue": "天官赐福在年初 喜事可遇祸不求",
      "year": 2007,
      "yun": "养",
    },
    {
      "age": 8,
      "chance": "争夺",
      "gua": "假象",
      "jiedu": "所有现象都是假的",
      "koujue": "内有困像外有机 恐是一片假象起",
      "year": 2008,
      "yun": "长生",
    },
    {
      "age": 9,
      "chance": "付出",
      "gua": "断后",
      "jiedu": "不可投资",
      "koujue": "世外桃源似奇迹 忙得前段无后期",
      "year": 2009,
      "yun": "冠带",
    },
    {
      "age": 10,
      "chance": "名望",
      "gua": "名声",
      "jiedu": "找大靠山大你72倍",
      "koujue": "机到同时运当前 二郎神边哮天犬",
      "year": 2010,
      "yun": "临官",
    },
    {
      "age": 11,
      "chance": "入库",
      "gua": "努力",
      "jiedu": "经商好从政得支持",
      "koujue": "金银财宝在地底 努力挖掘莫猜疑",
      "year": 2011,
      "yun": "帝旺",
    },
    {
      "age": 12,
      "chance": "升格",
      "gua": "栽培",
      "jiedu": "主动要求更上层",
      "koujue": "升官机会前等待 求得贵人把我栽",
      "year": 2012,
      "yun": "衰",
    },
    {
      "age": 13,
      "chance": "开拓",
      "gua": "失蹄",
      "jiedu": "不该投资",
      "koujue": "今日风采不如昔 四战三败马失蹄",
      "year": 2013,
      "yun": "病",
    },
    {
      "age": 14,
      "chance": "转变",
      "gua": "转世",
      "jiedu": "关键卦，看似无路却能救",
      "koujue": "山穷水尽疑无路 柳暗花明又一村",
      "year": 2014,
      "yun": "死",
    },
    {
      "age": 15,
      "chance": "晦暗",
      "gua": "乌云",
      "jiedu": "90年最不好的一年",
      "koujue": "陷进泥沼无支撑 又逢满天乌云层",
      "year": 2015,
      "yun": "绝",
    },
    {
      "age": 16,
      "chance": "享成",
      "gua": "回报",
      "jiedu": "只能被动等不能急",
      "koujue": "前种福田好乐施 感恩回报在此时",
      "year": 2016,
      "yun": "胎",
    },
    {
      "age": 17,
      "chance": "争夺",
      "gua": "额外",
      "jiedu": "不要多得",
      "koujue": "纷纷争争外相亲 多得一份苦煞心",
      "year": 2017,
      "yun": "养",
    },
    {
      "age": 18,
      "chance": "付出",
      "gua": "突围",
      "jiedu": "事业会结束",
      "koujue": "四面楚歌十面伏 突出重围江东哭",
      "year": 2018,
      "yun": "长生",
    },
    {
      "age": 19,
      "chance": "名望",
      "gua": "名望",
      "jiedu": "靠知名度，出名七分留三分",
      "koujue": "威震九洲是二爷 光芒四射怕引蝶",
      "year": 2019,
      "yun": "冠带",
    },
    {
      "age": 20,
      "chance": "入库",
      "gua": "昙花",
      "jiedu": "昙花一现要低调",
      "koujue": "拨得云开见月圆 就怕好景昙花现",
      "year": 2020,
      "yun": "临官",
    },
    {
      "age": 21,
      "chance": "升格",
      "gua": "强敌",
      "jiedu": "上去很难还有人拖后腿",
      "koujue": "更上层楼已艰辛 奈何又现程咬金",
      "year": 2021,
      "yun": "帝旺",
    },
    {
      "age": 22,
      "chance": "开拓",
      "gua": "退隐",
      "jiedu": "要退后放下修身养性",
      "koujue": "缓缓衰退名难再 不如修道或吃斋",
      "year": 2022,
      "yun": "衰",
    },
    {
      "age": 23,
      "chance": "转变",
      "gua": "不定",
      "jiedu": "很不稳定的运",
      "koujue": "多云阵阵不定天 早败年底晚三年",
      "year": 2023,
      "yun": "病",
    },
    {
      "age": 24,
      "chance": "晦暗",
      "gua": "暗渡",
      "jiedu": "不能明着做事要低调",
      "koujue": "暗渡陈仓免遭殃 恶名昭彰在本乡",
      "year": 2024,
      "yun": "死",
    },
    {
      "age": 25,
      "chance": "享成",
      "gua": "贵人",
      "jiedu": "关键卦，有贵人",
      "koujue": "我本无心再期待 怎知贵人要安排",
      "year": 2025,
      "yun": "绝",
    },
    {
      "age": 26,
      "chance": "争夺",
      "gua": "流产",
      "jiedu": "不要去抢，一半就掉",
      "koujue": "烦烦杂杂事生机 要抢必有胎落地",
      "year": 2026,
      "yun": "胎",
    },
    {
      "age": 27,
      "chance": "付出",
      "gua": "空欢",
      "jiedu": "被动接来空欢喜",
      "koujue": "处处天象皆是虚 接得召来空欢喜",
      "year": 2027,
      "yun": "养",
    },
    {
      "age": 28,
      "chance": "名望",
      "gua": "小得",
      "jiedu": "适合局3，捡小利",
      "koujue": "天上星星仙女华 捡到小利得小发",
      "year": 2028,
      "yun": "长生",
    },
    {
      "age": 29,
      "chance": "入库",
      "gua": "抑制",
      "jiedu": "要压抑处理好上层",
      "koujue": "下了金牌压岳飞 冲天之志要收回",
      "year": 2029,
      "yun": "冠带",
    },
    {
      "age": 30,
      "chance": "升格",
      "gua": "兼差",
      "jiedu": "可兼差不要去转",
      "koujue": "机会出现有两三 宁可双兼不要转",
      "year": 2030,
      "yun": "临官",
    },
    {
      "age": 31,
      "chance": "开拓",
      "gua": "无果",
      "jiedu": "不要白手起家守成",
      "koujue": "一片荒凉无边际 种得花果古来稀",
      "year": 2031,
      "yun": "帝旺",
    },
    {
      "age": 32,
      "chance": "转变",
      "gua": "外乡",
      "jiedu": "停顿时往外发展",
      "koujue": "此运不佳会倦怠 往外发展两冬期",
      "year": 2032,
      "yun": "衰",
    },
    {
      "age": 33,
      "chance": "晦暗",
      "gua": "多病",
      "jiedu": "相当不好很难渡过",
      "koujue": "体弱多病真无奈 雪上加霜真无奈",
      "year": 2033,
      "yun": "病",
    },
    {
      "age": 34,
      "chance": "享成",
      "gua": "机运",
      "jiedu": "关键卦，人际好有机会",
      "koujue": "机运贵人南与西 尊上亲下做几许",
      "year": 2034,
      "yun": "死",
    },
    {
      "age": 35,
      "chance": "争夺",
      "gua": "忠诚",
      "jiedu": "要光荣的死可结束",
      "koujue": "人生自古谁无死 留取丹心照汗青",
      "year": 2035,
      "yun": "绝",
    },
    {
      "age": 36,
      "chance": "付出",
      "gua": "小利",
      "jiedu": "有人造就可得小利",
      "koujue": "活气出现暗显机 少接无伤造有力",
      "year": 2036,
      "yun": "胎",
    },
    {
      "age": 37,
      "chance": "名望",
      "gua": "两仪",
      "jiedu": "九年一半好一半不好",
      "koujue": "阴阳两仪交互替 年初不顺年冬吉",
      "year": 2037,
      "yun": "养",
    },
    {
      "age": 38,
      "chance": "入库",
      "gua": "正财",
      "jiedu": "慢慢赚在里面赚",
      "koujue": "暗暗吸收缓缓落 阁内成长赚得多",
      "year": 2038,
      "yun": "长生",
    },
    {
      "age": 39,
      "chance": "升格",
      "gua": "升官",
      "jiedu": "帮到别人得到提升",
      "koujue": "盗得玉玺助帝王 获得兵权又加冠",
      "year": 2039,
      "yun": "冠带",
    },
    {
      "age": 40,
      "chance": "开拓",
      "gua": "追击",
      "jiedu": "要追上去主动去追",
      "koujue": "春雨绵绵偶晴天 乘胜追击在当前",
      "year": 2040,
      "yun": "临官",
    },
    {
      "age": 41,
      "chance": "转变",
      "gua": "实虚",
      "jiedu": "前实后虚",
      "koujue": "高峰转变有时机 前段当实后段虚",
      "year": 2041,
      "yun": "帝旺",
    },
    {
      "age": 42,
      "chance": "晦暗",
      "gua": "衰退",
      "jiedu": "越到年底越要注意",
      "koujue": "有人说我是鳌拜 气数将近年底来",
      "year": 2042,
      "yun": "衰",
    },
    {
      "age": 43,
      "chance": "享成",
      "gua": "变节",
      "jiedu": "拿不到更多可能变节",
      "koujue": "锦上添花难封侯 变节之心已难收",
      "year": 2043,
      "yun": "病",
    },
    {
      "age": 44,
      "chance": "争夺",
      "gua": "无依",
      "jiedu": "被动低调",
      "koujue": "曾经风云功与过 今恐贬官又枷锁",
      "year": 2044,
      "yun": "死",
    },
    {
      "age": 45,
      "chance": "付出",
      "gua": "静观",
      "jiedu": "安静观望不闯新",
      "koujue": "不急不忙静观望 守住旧业胜新关",
      "year": 2045,
      "yun": "绝",
    },
    {
      "age": 46,
      "chance": "名望",
      "gua": "空相",
      "jiedu": "太极运，乱抢乱得一场空",
      "koujue": "一场好景似源头 竹篮打水一场空",
      "year": 2046,
      "yun": "胎",
    },
    {
      "age": 47,
      "chance": "入库",
      "gua": "守成",
      "jiedu": "守成",
      "koujue": "问说诸事如何办 只言守成可平安",
      "year": 2047,
      "yun": "养",
    },
    {
      "age": 48,
      "chance": "升格",
      "gua": "无尾",
      "jiedu": "做什么都没有结果",
      "koujue": "呱呱落地袍与冠 定是溥仪或刘禅",
      "year": 2048,
      "yun": "长生",
    },
    {
      "age": 49,
      "chance": "开拓",
      "gua": "破财",
      "jiedu": "换就没机会",
      "koujue": "看似一片好地带 左挖右垦总破财",
      "year": 2049,
      "yun": "冠带",
    },
    {
      "age": 50,
      "chance": "转变",
      "gua": "翻身",
      "jiedu": "关键卦，可被动换工作",
      "koujue": "鲤鱼龙门新身换 除旧布新得满贯",
      "year": 2050,
      "yun": "临官",
    },
    {
      "age": 51,
      "chance": "晦暗",
      "gua": "遭忌",
      "jiedu": "强出头势必遭忌",
      "koujue": "运上大道气落地 亢龙有悔遭人忌",
      "year": 2051,
      "yun": "帝旺",
    },
    {
      "age": 52,
      "chance": "享成",
      "gua": "短发",
      "jiedu": "换了三年也无结果",
      "koujue": "老怕空名利不来 中年达官无三载",
      "year": 2052,
      "yun": "衰",
    },
    {
      "age": 53,
      "chance": "争夺",
      "gua": "赔本",
      "jiedu": "主动投资必输",
      "koujue": "安排设计来招亲 赔了夫人又折兵",
      "year": 2053,
      "yun": "病",
    },
    {
      "age": 54,
      "chance": "付出",
      "gua": "放弃",
      "jiedu": "不要放弃，主动都输",
      "koujue": "放弃一切觅新路 怎知此步会大输",
      "year": 2054,
      "yun": "死",
    },
    {
      "age": 55,
      "chance": "名望",
      "gua": "虚名",
      "jiedu": "九年就是虚名",
      "koujue": "有人送终有人拱 徒有虚名一场空",
      "year": 2055,
      "yun": "绝",
    },
    {
      "age": 56,
      "chance": "入库",
      "gua": "套牢",
      "jiedu": "任何事都不要做",
      "koujue": "秋瑟过后寒冬至 自投罗网难逃脱",
      "year": 2056,
      "yun": "胎",
    },
    {
      "age": 57,
      "chance": "升格",
      "gua": "贪心",
      "jiedu": "现象是假的",
      "koujue": "气压下降非真迹 贪心不足撑破皮",
      "year": 2057,
      "yun": "养",
    },
    {
      "age": 58,
      "chance": "开拓",
      "gua": "奋斗",
      "jiedu": "能得名难得财",
      "koujue": "闻鸡起舞见祖荻 图强有成靠自己",
      "year": 2058,
      "yun": "长生",
    },
    {
      "age": 59,
      "chance": "转变",
      "gua": "追损",
      "jiedu": "还是虚名一年白忙",
      "koujue": "日正当中我当红 夸父追日饮长空",
      "year": 2059,
      "yun": "冠带",
    },
    {
      "age": 60,
      "chance": "晦暗",
      "gua": "盗取",
      "jiedu": "心里有邪念没结果",
      "koujue": "寒夜深深行急急 若非盗取亦投机",
      "year": 2060,
      "yun": "临官",
    },
    {
      "age": 61,
      "chance": "享成",
      "gua": "奇迹",
      "jiedu": "关键卦，求名不求利",
      "koujue": "不管机会排第几 此去前程有奇迹",
      "year": 2061,
      "yun": "帝旺",
    },
    {
      "age": 62,
      "chance": "争夺",
      "gua": "能力",
      "jiedu": "能看出一个人的能力",
      "koujue": "机会是好也是坏 看我贤能或庸才",
      "year": 2062,
      "yun": "衰",
    },
    {
      "age": 63,
      "chance": "付出",
      "gua": "断足",
      "jiedu": "朋友找你合作不要",
      "koujue": "交错朋友失双足 借问足下可帮谁",
      "year": 2063,
      "yun": "病",
    },
    {
      "age": 64,
      "chance": "名望",
      "gua": "功名",
      "jiedu": "奇迹短暂求名不求利",
      "koujue": "日月同光有奇迹 但求功名不求利",
      "year": 2064,
      "yun": "死",
    },
    {
      "age": 65,
      "chance": "入库",
      "gua": "包袱",
      "jiedu": "所有不同都是引狼入室",
      "koujue": "引狼入室变包袱 沉迷最爱必大输",
      "year": 2065,
      "yun": "绝",
    },
    {
      "age": 66,
      "chance": "升格",
      "gua": "承接",
      "jiedu": "旧货可接新货不行",
      "koujue": "承接一切看前例 若是二胎必大吉",
      "year": 2066,
      "yun": "胎",
    },
    {
      "age": 67,
      "chance": "开拓",
      "gua": "惊险",
      "jiedu": "不好的运慢慢来",
      "koujue": "苦果徐徐布满天 渡得有惊却无险",
      "year": 2067,
      "yun": "养",
    },
    {
      "age": 68,
      "chance": "转变",
      "gua": "苦成",
      "jiedu": "前面辛苦后面成长",
      "koujue": "辛苦成长各参半 更上层楼在后段",
      "year": 2068,
      "yun": "长生",
    },
    {
      "age": 69,
      "chance": "晦暗",
      "gua": "过气",
      "jiedu": "机会没了，属下易走光",
      "koujue": "黑夜魑魅飘忽忽 一将功成万骨枯",
      "year": 2069,
      "yun": "冠带",
    },
    {
      "age": 70,
      "chance": "享成",
      "gua": "祖德",
      "jiedu": "考验人际关系",
      "koujue": "二品官爵诸君要 祖上有德贵人罩",
      "year": 2070,
      "yun": "临官",
    },
    {
      "age": 71,
      "chance": "争夺",
      "gua": "接替",
      "jiedu": "关键卦，后面十年大运",
      "koujue": "加官进爵是天意 死了君王我接替",
      "year": 2071,
      "yun": "帝旺",
    },
    {
      "age": 72,
      "chance": "付出",
      "gua": "回收",
      "jiedu": "前面好最后可得利",
      "koujue": "此段回收财官利 持续努力会升级",
      "year": 2072,
      "yun": "衰",
    },
    {
      "age": 73,
      "chance": "名望",
      "gua": "良臣",
      "jiedu": "找到好人才不能独闯",
      "koujue": "众星拱月可上任 左右护法得良臣",
      "year": 2073,
      "yun": "病",
    },
    {
      "age": 74,
      "chance": "入库",
      "gua": "断头",
      "jiedu": "强行出头一定有事",
      "koujue": "坚守资源在本洲 强行出击必断头",
      "year": 2074,
      "yun": "死",
    },
    {
      "age": 75,
      "chance": "升格",
      "gua": "困滩",
      "jiedu": "依靠组织不独立",
      "koujue": "龙困乾涸难伸展 养精蓄锐勿上滩",
      "year": 2075,
      "yun": "绝",
    },
    {
      "age": 76,
      "chance": "开拓",
      "gua": "作梦",
      "jiedu": "好像是机会但假象",
      "koujue": "曙光一现乍见天 就恐造成南柯梦",
      "year": 2076,
      "yun": "胎",
    },
    {
      "age": 77,
      "chance": "转变",
      "gua": "转机",
      "jiedu": "关键卦，8月后马上转",
      "koujue": "天窗一开新鲜气 仲夏过后大转机",
      "year": 2077,
      "yun": "养",
    },
    {
      "age": 78,
      "chance": "晦暗",
      "gua": "是非",
      "jiedu": "不能做暗事高调有是非",
      "koujue": "暗夜偷生异地喜 奈何回乡满城雨",
      "year": 2078,
      "yun": "长生",
    },
    {
      "age": 79,
      "chance": "享成",
      "gua": "不诚",
      "jiedu": "不诚心就没有格局",
      "koujue": "神仙护佑诚心客 枉然独闯难有格",
      "year": 2079,
      "yun": "冠带",
    },
    {
      "age": 80,
      "chance": "争夺",
      "gua": "苦渡",
      "jiedu": "辛苦但能过",
      "koujue": "前有恶煞后有虎 此关渡得真辛苦",
      "year": 2080,
      "yun": "临官",
    },
    {
      "age": 81,
      "chance": "付出",
      "gua": "根基",
      "jiedu": "看前面的基础",
      "koujue": "想再多闯新天地 一切成败看根基",
      "year": 2081,
      "yun": "帝旺",
    },
    {
      "age": 82,
      "chance": "名望",
      "gua": "因果",
      "jiedu": "前五年经营体现",
      "koujue": "机运当强论成败 努力回顾前五载",
      "year": 2082,
      "yun": "衰",
    },
    {
      "age": 83,
      "chance": "入库",
      "gua": "经营",
      "jiedu": "赚七分新亏三分旧",
      "koujue": "七分利来三分债 坚守经营可旺财",
      "year": 2083,
      "yun": "病",
    },
    {
      "age": 84,
      "chance": "升格",
      "gua": "层级",
      "jiedu": "关键卦，看你的层级",
      "koujue": "龙有龙形虎有步 老鼠最盛在暗处",
      "year": 2084,
      "yun": "死",
    },
    {
      "age": 85,
      "chance": "开拓",
      "gua": "未开",
      "jiedu": "按兵不动生门未开",
      "koujue": "今想还阳又何奈 只是生门打不开",
      "year": 2085,
      "yun": "绝",
    },
    {
      "age": 86,
      "chance": "转变",
      "gua": "乾坤",
      "jiedu": "天地运要有正气",
      "koujue": "抛去以往旧包袱 扭转乾坤从头来",
      "year": 2086,
      "yun": "胎",
    },
    {
      "age": 87,
      "chance": "晦暗",
      "gua": "投机",
      "jiedu": "不要投机",
      "koujue": "黑暗煞神从天降 投得短机亏双空",
      "year": 2087,
      "yun": "养",
    },
    {
      "age": 88,
      "chance": "享成",
      "gua": "再生",
      "jiedu": "天来帮助",
      "koujue": "天显神机来相助 求得重生现江湖",
      "year": 2088,
      "yun": "长生",
    },
    {
      "age": 89,
      "chance": "争夺",
      "gua": "忙碌",
      "jiedu": "打好基础不可独闯",
      "koujue": "帅喜印来将要旗 一夫当关万人敌",
      "year": 2089,
      "yun": "冠带",
    },
    {
      "age": 90,
      "chance": "付出",
      "gua": "奔驰",
      "jiedu": "不能休息要跑起来",
      "koujue": "赤兔神驹风和配 日奔千里不觉累",
      "year": 2090,
      "yun": "临官",
    },
  ],
  "zhi": 9,
  "zhiDesc": "变化型，破坏与创意并存",
  "zhiElement": "阳水",
  "zhiFull": "变化型，破坏与创意并存",
  "zhiName": "五鬼星",
  "zong": 39,
}
`;

exports[`jiugong v6 server engine > matches every legacy field for 'three-character name' 1`] = `
{
  "actionDesc": "",
  "actionRel": "土克木",
  "ageStar": "田宅星(口舌星)",
  "ageStarDesc": "置产修屋，口舌是非",
  "ageStarFull": "田宅星（口舌星）：掌管住宅、房地产等。每逢田宅星出现，则很容易有置产及修屋之机会。假如再碰到迁移宫发动，则迁移之新宅多为福宅。以口舌为业者（教育、演说、歌唱、行销等）反而显得出色。若运势不好则易招惹口舌是非。",
  "day": 8,
  "di": 16,
  "diWx": "土",
  "energyFull": {
    "临官": "扩大发展，主动运。发展期，忙碌升官，扩张事业版图。动力十足，创业升官看基础。这一年适合积极进取、扩大影响力，但需注意打好基础再行动。",
    "养": "吸收期，根基成长，积累培养。防投机取巧。养得助力在人际，长生贵人生两地。这一阶段需要沉淀和蓄力，为后面的突破做准备。",
    "冠带": "发挥本质最大，主动运。成熟期，自我表现，成名上位，但有抗性。这是能量最强的主动运之一，适合展现个人魅力与能力，但需注意不要过于高调而招致反弹。",
    "帝旺": "巅峰期，能量最强也最乱。高亢天助，防贪防傲。这是能量周期的顶点，最强大的运程，但也是容易失控的时期。若是帝旺还负债，后运滚滚筑高台。",
    "死": "破灭期，终止停顿，不宜妄动。脆弱易碎，外地贵人，放下执念。看似最差的运程，但死也意味着旧的事物终结，为新开始腾出空间。",
    "病": "病变期，变化与乱，需谨慎。波折考验，冷静检查。这一年容易出现各种小问题和不顺利，需要格外谨慎。身体和事业都需要定期"体检"。",
    "绝": "谷底期，空窗空洞，等待时机。结束重生，新的开始。这是能量最低点，也是转机的前夜。不宜做任何重大决策，静待时来运转。",
    "胎": "酝酿期，谷底被动，新想法萌生。新的起点，一切刚刚开始。胎是谷底也是转机，一切变量九宫管。这个时候适合学习和积累，不要急于求成。",
    "衰": "倦怠期，回收守成，防变防换。守住退守，被动运。这一年不宜大动作，适合回收整理、稳固已有成果。守成为主，不可轻举妄动。",
    "长生": "成长期，突破期，被动运。贵人相助，人和行动。这是新一轮上升的开始，适合积极行动，把握人际关系带来的机会。",
  },
  "groups": [
    {
      "ages": "1-9岁",
      "count": 9,
      "name": "巅峰运",
    },
    {
      "ages": "10-18岁",
      "count": 9,
      "name": "靠山运",
    },
    {
      "ages": "19-27岁",
      "count": 9,
      "name": "打拼运",
    },
    {
      "ages": "28-36岁",
      "count": 9,
      "name": "小得运",
    },
    {
      "ages": "37-45岁",
      "count": 9,
      "name": "追击运",
    },
    {
      "ages": "46-54岁",
      "count": 9,
      "name": "专注运",
    },
    {
      "ages": "55-63岁",
      "count": 9,
      "name": "虚名运",
    },
    {
      "ages": "64-72岁",
      "count": 9,
      "name": "功名运",
    },
    {
      "ages": "73-81岁",
      "count": 9,
      "name": "组织运",
    },
    {
      "ages": "82-90岁",
      "count": 9,
      "name": "回收运",
    },
  ],
  "ju": 4,
  "juDesc": "志向远大，求功名",
  "juFull": "【口诀】志向大海一片天，将相王侯皆不限。欲知高峰在何处？只爱王权不羡仙。

今生前程发展的指标要抱定一个宗旨，那就是要有远大的志向，求功、求名为第一志愿。想要达到高峰则要有强烈的企图心才可；若是生平无大志、只想安逸过日子或强烈的投入宗教、修道，则难有大成之象。

志向越大越好。有宗教信仰，事业就起不来；信仰越虔诚，事业越糟糕。所以局差四的人要想事业成功，就要将信仰暂时放两边，只羡王权不羡仙。基本上局差四的人，常常会有宗教信仰。

例如赵传27划，信仰密宗，结果就影响了他的事业。事业与信仰的冲突，是局差四的人一生都无可奈何的选择。",
  "lowerEnergy": "养",
  "lowerGua": "开拓养",
  "lowerQi": "开拓",
  "lowerStrategy": "获授权大胆前进",
  "mainFunc": "主功能",
  "mainFuncDesc": "主动性强、勤劳踏实、白手起家，适合操作流年",
  "mainNum": 6,
  "marriage": "破象",
  "marriageDesc": "感情有波折",
  "mgtDesc": "稳健培植型",
  "mgtFull": "管理指数高（75分），排名第五。后天的磨练累积才能激发出来，属培植型的管理细胞。经年累月的经验可以使其倍数成长，就像森林一样愈积愈多。最大的优点是一旦发挥出来就不易退化。稳健式的管理风格——最不会让属下有所抗性。喜欢太平时期的五行。名人：刘邦、马英九。",
  "mgtScore": 75,
  "mgtType": "林木型",
  "month": 10,
  "name": "张伟民",
  "outerEnergy": "胎",
  "outerGua": "入库胎",
  "outerQi": "入库",
  "outerStrategy": "跟随既有资源",
  "ren": 22,
  "renWx": "木",
  "selfEnergy": "帝旺",
  "selfGua": "享成帝旺",
  "selfQi": "享成",
  "selfStrategy": "感恩回报",
  "thinkDesc": "",
  "thinkRel": "木平木",
  "tian": 12,
  "tianWx": "木",
  "total": 27,
  "upperEnergy": "帝旺",
  "upperGua": "争夺帝旺",
  "upperQi": "争夺",
  "upperStrategy": "需上层支持",
  "wai": 6,
  "wealthPalace": "库泄",
  "wealthPalaceDesc": "大方型，钱留不住",
  "wealthPath": "加3（机运暗财型）：受栽培，赚钱无人知",
  "wxActionFull": "",
  "wxThinkFull": "",
  "xiangStrategy": {
    "争夺": {
      "caution": "能力见真章，竞争激烈",
      "lower": "奖惩分明防挖角",
      "outer": "守好基本盘再扩张",
      "self": "能力被考验",
      "upper": "需上层支持",
    },
    "享成": {
      "caution": "最忌得意忘形",
      "lower": "大方分享凝聚人心",
      "outer": "巩固合作关系",
      "self": "犒赏自己",
      "upper": "感恩回报",
    },
    "付出": {
      "caution": "放弃则前功尽弃",
      "lower": "短期看不到回报",
      "outer": "多付出少计较",
      "self": "不要放弃",
      "upper": "付出不求回报",
    },
    "入库": {
      "caution": "守成为上，不宜冒进",
      "lower": "给下属安全感",
      "outer": "维护老客户",
      "self": "守住老本不宜开创",
      "upper": "跟随既有资源",
    },
    "升格": {
      "caution": "升格也招嫉妒，注意人际",
      "lower": "栽培人才",
      "outer": "适宜谈判签约",
      "self": "提升自身层级",
      "upper": "积极表现",
    },
    "名望": {
      "caution": "名望双刃剑，忌骄傲",
      "lower": "以身作则",
      "outer": "建立口碑",
      "self": "打造个人品牌",
      "upper": "展现专业",
    },
    "开拓": {
      "caution": "不可冲太快，稳中求进",
      "lower": "激团队士气",
      "outer": "拓展新合作",
      "self": "开拓新领域",
      "upper": "获授权大胆前进",
    },
    "晦暗": {
      "caution": "容易被误导，高调必有是非",
      "lower": "多关心少强求",
      "outer": "不熟领域别碰",
      "self": "反思学习",
      "upper": "不宜主动请缨",
    },
    "转变": {
      "caution": "前五年经营决定转好转坏，不可独闯",
      "lower": "引导下属适应变化",
      "outer": "合作关键转折点",
      "self": "抛弃旧包袱扭转乾坤",
      "upper": "跟上沟通转型方向",
    },
  },
  "xingyunFull": "靠自己奋斗、表现能力踏实经营发展，故有能力星之称，因得不到母体资助故又称孤星。容易为伴侣与家庭全心付出。靠实力、劳心劳力，正财，着重技术面。",
  "xingyunName": "能力星",
  "xuAge": 34,
  "year": 1992,
  "years": [
    {
      "age": 1,
      "chance": "开拓",
      "gua": "失蹄",
      "jiedu": "不该投资",
      "koujue": "今日风采不如昔 四战三败马失蹄",
      "year": 1992,
      "yun": "病",
    },
    {
      "age": 2,
      "chance": "转变",
      "gua": "转世",
      "jiedu": "关键卦，看似无路却能救",
      "koujue": "山穷水尽疑无路 柳暗花明又一村",
      "year": 1993,
      "yun": "死",
    },
    {
      "age": 3,
      "chance": "晦暗",
      "gua": "乌云",
      "jiedu": "90年最不好的一年",
      "koujue": "陷进泥沼无支撑 又逢满天乌云层",
      "year": 1994,
      "yun": "绝",
    },
    {
      "age": 4,
      "chance": "享成",
      "gua": "回报",
      "jiedu": "只能被动等不能急",
      "koujue": "前种福田好乐施 感恩回报在此时",
      "year": 1995,
      "yun": "胎",
    },
    {
      "age": 5,
      "chance": "争夺",
      "gua": "额外",
      "jiedu": "不要多得",
      "koujue": "纷纷争争外相亲 多得一份苦煞心",
      "year": 1996,
      "yun": "养",
    },
    {
      "age": 6,
      "chance": "付出",
      "gua": "突围",
      "jiedu": "事业会结束",
      "koujue": "四面楚歌十面伏 突出重围江东哭",
      "year": 1997,
      "yun": "长生",
    },
    {
      "age": 7,
      "chance": "名望",
      "gua": "名望",
      "jiedu": "靠知名度，出名七分留三分",
      "koujue": "威震九洲是二爷 光芒四射怕引蝶",
      "year": 1998,
      "yun": "冠带",
    },
    {
      "age": 8,
      "chance": "入库",
      "gua": "昙花",
      "jiedu": "昙花一现要低调",
      "koujue": "拨得云开见月圆 就怕好景昙花现",
      "year": 1999,
      "yun": "临官",
    },
    {
      "age": 9,
      "chance": "升格",
      "gua": "强敌",
      "jiedu": "上去很难还有人拖后腿",
      "koujue": "更上层楼已艰辛 奈何又现程咬金",
      "year": 2000,
      "yun": "帝旺",
    },
    {
      "age": 10,
      "chance": "开拓",
      "gua": "退隐",
      "jiedu": "要退后放下修身养性",
      "koujue": "缓缓衰退名难再 不如修道或吃斋",
      "year": 2001,
      "yun": "衰",
    },
    {
      "age": 11,
      "chance": "转变",
      "gua": "不定",
      "jiedu": "很不稳定的运",
      "koujue": "多云阵阵不定天 早败年底晚三年",
      "year": 2002,
      "yun": "病",
    },
    {
      "age": 12,
      "chance": "晦暗",
      "gua": "暗渡",
      "jiedu": "不能明着做事要低调",
      "koujue": "暗渡陈仓免遭殃 恶名昭彰在本乡",
      "year": 2003,
      "yun": "死",
    },
    {
      "age": 13,
      "chance": "享成",
      "gua": "贵人",
      "jiedu": "关键卦，有贵人",
      "koujue": "我本无心再期待 怎知贵人要安排",
      "year": 2004,
      "yun": "绝",
    },
    {
      "age": 14,
      "chance": "争夺",
      "gua": "流产",
      "jiedu": "不要去抢，一半就掉",
      "koujue": "烦烦杂杂事生机 要抢必有胎落地",
      "year": 2005,
      "yun": "胎",
    },
    {
      "age": 15,
      "chance": "付出",
      "gua": "空欢",
      "jiedu": "被动接来空欢喜",
      "koujue": "处处天象皆是虚 接得召来空欢喜",
      "year": 2006,
      "yun": "养",
    },
    {
      "age": 16,
      "chance": "名望",
      "gua": "小得",
      "jiedu": "适合局3，捡小利",
      "koujue": "天上星星仙女华 捡到小利得小发",
      "year": 2007,
      "yun": "长生",
    },
    {
      "age": 17,
      "chance": "入库",
      "gua": "抑制",
      "jiedu": "要压抑处理好上层",
      "koujue": "下了金牌压岳飞 冲天之志要收回",
      "year": 2008,
      "yun": "冠带",
    },
    {
      "age": 18,
      "chance": "升格",
      "gua": "兼差",
      "jiedu": "可兼差不要去转",
      "koujue": "机会出现有两三 宁可双兼不要转",
      "year": 2009,
      "yun": "临官",
    },
    {
      "age": 19,
      "chance": "开拓",
      "gua": "无果",
      "jiedu": "不要白手起家守成",
      "koujue": "一片荒凉无边际 种得花果古来稀",
      "year": 2010,
      "yun": "帝旺",
    },
    {
      "age": 20,
      "chance": "转变",
      "gua": "外乡",
      "jiedu": "停顿时往外发展",
      "koujue": "此运不佳会倦怠 往外发展两冬期",
      "year": 2011,
      "yun": "衰",
    },
    {
      "age": 21,
      "chance": "晦暗",
      "gua": "多病",
      "jiedu": "相当不好很难渡过",
      "koujue": "体弱多病真无奈 雪上加霜真无奈",
      "year": 2012,
      "yun": "病",
    },
    {
      "age": 22,
      "chance": "享成",
      "gua": "机运",
      "jiedu": "关键卦，人际好有机会",
      "koujue": "机运贵人南与西 尊上亲下做几许",
      "year": 2013,
      "yun": "死",
    },
    {
      "age": 23,
      "chance": "争夺",
      "gua": "忠诚",
      "jiedu": "要光荣的死可结束",
      "koujue": "人生自古谁无死 留取丹心照汗青",
      "year": 2014,
      "yun": "绝",
    },
    {
      "age": 24,
      "chance": "付出",
      "gua": "小利",
      "jiedu": "有人造就可得小利",
      "koujue": "活气出现暗显机 少接无伤造有力",
      "year": 2015,
      "yun": "胎",
    },
    {
      "age": 25,
      "chance": "名望",
      "gua": "两仪",
      "jiedu": "九年一半好一半不好",
      "koujue": "阴阳两仪交互替 年初不顺年冬吉",
      "year": 2016,
      "yun": "养",
    },
    {
      "age": 26,
      "chance": "入库",
      "gua": "正财",
      "jiedu": "慢慢赚在里面赚",
      "koujue": "暗暗吸收缓缓落 阁内成长赚得多",
      "year": 2017,
      "yun": "长生",
    },
    {
      "age": 27,
      "chance": "升格",
      "gua": "升官",
      "jiedu": "帮到别人得到提升",
      "koujue": "盗得玉玺助帝王 获得兵权又加冠",
      "year": 2018,
      "yun": "冠带",
    },
    {
      "age": 28,
      "chance": "开拓",
      "gua": "追击",
      "jiedu": "要追上去主动去追",
      "koujue": "春雨绵绵偶晴天 乘胜追击在当前",
      "year": 2019,
      "yun": "临官",
    },
    {
      "age": 29,
      "chance": "转变",
      "gua": "实虚",
      "jiedu": "前实后虚",
      "koujue": "高峰转变有时机 前段当实后段虚",
      "year": 2020,
      "yun": "帝旺",
    },
    {
      "age": 30,
      "chance": "晦暗",
      "gua": "衰退",
      "jiedu": "越到年底越要注意",
      "koujue": "有人说我是鳌拜 气数将近年底来",
      "year": 2021,
      "yun": "衰",
    },
    {
      "age": 31,
      "chance": "享成",
      "gua": "变节",
      "jiedu": "拿不到更多可能变节",
      "koujue": "锦上添花难封侯 变节之心已难收",
      "year": 2022,
      "yun": "病",
    },
    {
      "age": 32,
      "chance": "争夺",
      "gua": "无依",
      "jiedu": "被动低调",
      "koujue": "曾经风云功与过 今恐贬官又枷锁",
      "year": 2023,
      "yun": "死",
    },
    {
      "age": 33,
      "chance": "付出",
      "gua": "静观",
      "jiedu": "安静观望不闯新",
      "koujue": "不急不忙静观望 守住旧业胜新关",
      "year": 2024,
      "yun": "绝",
    },
    {
      "age": 34,
      "chance": "名望",
      "gua": "空相",
      "jiedu": "太极运，乱抢乱得一场空",
      "koujue": "一场好景似源头 竹篮打水一场空",
      "year": 2025,
      "yun": "胎",
    },
    {
      "age": 35,
      "chance": "入库",
      "gua": "守成",
      "jiedu": "守成",
      "koujue": "问说诸事如何办 只言守成可平安",
      "year": 2026,
      "yun": "养",
    },
    {
      "age": 36,
      "chance": "升格",
      "gua": "无尾",
      "jiedu": "做什么都没有结果",
      "koujue": "呱呱落地袍与冠 定是溥仪或刘禅",
      "year": 2027,
      "yun": "长生",
    },
    {
      "age": 37,
      "chance": "开拓",
      "gua": "破财",
      "jiedu": "换就没机会",
      "koujue": "看似一片好地带 左挖右垦总破财",
      "year": 2028,
      "yun": "冠带",
    },
    {
      "age": 38,
      "chance": "转变",
      "gua": "翻身",
      "jiedu": "关键卦，可被动换工作",
      "koujue": "鲤鱼龙门新身换 除旧布新得满贯",
      "year": 2029,
      "yun": "临官",
    },
    {
      "age": 39,
      "chance": "晦暗",
      "gua": "遭忌",
      "jiedu": "强出头势必遭忌",
      "koujue": "运上大道气落地 亢龙有悔遭人忌",
      "year": 2030,
      "yun": "帝旺",
    },
    {
      "age": 40,
      "chance": "享成",
      "gua": "短发",
      "jiedu": "换了三年也无结果",
      "koujue": "老怕空名利不来 中年达官无三载",
      "year": 2031,
      "yun": "衰",
    },
    {
      "age": 41,
      "chance": "争夺",
      "gua": "赔本",
      "jiedu": "主动投资必输",
      "koujue": "安排设计来招亲 赔了夫人又折兵",
      "year": 2032,
      "yun": "病",
    },
    {
      "age": 42,
      "chance": "付出",
      "gua": "放弃",
      "jiedu": "不要放弃，主动都输",
      "koujue": "放弃一切觅新路 怎知此步会大输",
      "year": 2033,
      "yun": "死",
    },
    {
      "age": 43,
      "chance": "名望",
      "gua": "虚名",
      "jiedu": "九年就是虚名",
      "koujue": "有人送终有人拱 徒有虚名一场空",
      "year": 2034,
      "yun": "绝",
    },
    {
      "age": 44,
      "chance": "入库",
      "gua": "套牢",
      "jiedu": "任何事都不要做",
      "koujue": "秋瑟过后寒冬至 自投罗网难逃脱",
      "year": 2035,
      "yun": "胎",
    },
    {
      "age": 45,
      "chance": "升格",
      "gua": "贪心",
      "jiedu": "现象是假的",
      "koujue": "气压下降非真迹 贪心不足撑破皮",
      "year": 2036,
      "yun": "养",
    },
    {
      "age": 46,
      "chance": "开拓",
      "gua": "奋斗",
      "jiedu": "能得名难得财",
      "koujue": "闻鸡起舞见祖荻 图强有成靠自己",
      "year": 2037,
      "yun": "长生",
    },
    {
      "age": 47,
      "chance": "转变",
      "gua": "追损",
      "jiedu": "还是虚名一年白忙",
      "koujue": "日正当中我当红 夸父追日饮长空",
      "year": 2038,
      "yun": "冠带",
    },
    {
      "age": 48,
      "chance": "晦暗",
      "gua": "盗取",
      "jiedu": "心里有邪念没结果",
      "koujue": "寒夜深深行急急 若非盗取亦投机",
      "year": 2039,
      "yun": "临官",
    },
    {
      "age": 49,
      "chance": "享成",
      "gua": "奇迹",
      "jiedu": "关键卦，求名不求利",
      "koujue": "不管机会排第几 此去前程有奇迹",
      "year": 2040,
      "yun": "帝旺",
    },
    {
      "age": 50,
      "chance": "争夺",
      "gua": "能力",
      "jiedu": "能看出一个人的能力",
      "koujue": "机会是好也是坏 看我贤能或庸才",
      "year": 2041,
      "yun": "衰",
    },
    {
      "age": 51,
      "chance": "付出",
      "gua": "断足",
      "jiedu": "朋友找你合作不要",
      "koujue": "交错朋友失双足 借问足下可帮谁",
      "year": 2042,
      "yun": "病",
    },
    {
      "age": 52,
      "chance": "名望",
      "gua": "功名",
      "jiedu": "奇迹短暂求名不求利",
      "koujue": "日月同光有奇迹 但求功名不求利",
      "year": 2043,
      "yun": "死",
    },
    {
      "age": 53,
      "chance": "入库",
      "gua": "包袱",
      "jiedu": "所有不同都是引狼入室",
      "koujue": "引狼入室变包袱 沉迷最爱必大输",
      "year": 2044,
      "yun": "绝",
    },
    {
      "age": 54,
      "chance": "升格",
      "gua": "承接",
      "jiedu": "旧货可接新货不行",
      "koujue": "承接一切看前例 若是二胎必大吉",
      "year": 2045,
      "yun": "胎",
    },
    {
      "age": 55,
      "chance": "开拓",
      "gua": "惊险",
      "jiedu": "不好的运慢慢来",
      "koujue": "苦果徐徐布满天 渡得有惊却无险",
      "year": 2046,
      "yun": "养",
    },
    {
      "age": 56,
      "chance": "转变",
      "gua": "苦成",
      "jiedu": "前面辛苦后面成长",
      "koujue": "辛苦成长各参半 更上层楼在后段",
      "year": 2047,
      "yun": "长生",
    },
    {
      "age": 57,
      "chance": "晦暗",
      "gua": "过气",
      "jiedu": "机会没了，属下易走光",
      "koujue": "黑夜魑魅飘忽忽 一将功成万骨枯",
      "year": 2048,
      "yun": "冠带",
    },
    {
      "age": 58,
      "chance": "享成",
      "gua": "祖德",
      "jiedu": "考验人际关系",
      "koujue": "二品官爵诸君要 祖上有德贵人罩",
      "year": 2049,
      "yun": "临官",
    },
    {
      "age": 59,
      "chance": "争夺",
      "gua": "接替",
      "jiedu": "关键卦，后面十年大运",
      "koujue": "加官进爵是天意 死了君王我接替",
      "year": 2050,
      "yun": "帝旺",
    },
    {
      "age": 60,
      "chance": "付出",
      "gua": "回收",
      "jiedu": "前面好最后可得利",
      "koujue": "此段回收财官利 持续努力会升级",
      "year": 2051,
      "yun": "衰",
    },
    {
      "age": 61,
      "chance": "名望",
      "gua": "良臣",
      "jiedu": "找到好人才不能独闯",
      "koujue": "众星拱月可上任 左右护法得良臣",
      "year": 2052,
      "yun": "病",
    },
    {
      "age": 62,
      "chance": "入库",
      "gua": "断头",
      "jiedu": "强行出头一定有事",
      "koujue": "坚守资源在本洲 强行出击必断头",
      "year": 2053,
      "yun": "死",
    },
    {
      "age": 63,
      "chance": "升格",
      "gua": "困滩",
      "jiedu": "依靠组织不独立",
      "koujue": "龙困乾涸难伸展 养精蓄锐勿上滩",
      "year": 2054,
      "yun": "绝",
    },
    {
      "age": 64,
      "chance": "开拓",
      "gua": "作梦",
      "jiedu": "好像是机会但假象",
      "koujue": "曙光一现乍见天 就恐造成南柯梦",
      "year": 2055,
      "yun": "胎",
    },
    {
      "age": 65,
      "chance": "转变",
      "gua": "转机",
      "jiedu": "关键卦，8月后马上转",
      "koujue": "天窗一开新鲜气 仲夏过后大转机",
      "year": 2056,
      "yun": "养",
    },
    {
      "age": 66,
      "chance": "晦暗",
      "gua": "是非",
      "jiedu": "不能做暗事高调有是非",
      "koujue": "暗夜偷生异地喜 奈何回乡满城雨",
      "year": 2057,
      "yun": "长生",
    },
    {
      "age": 67,
      "chance": "享成",
      "gua": "不诚",
      "jiedu": "不诚心就没有格局",
      "koujue": "神仙护佑诚心客 枉然独闯难有格",
      "year": 2058,
      "yun": "冠带",
    },
    {
      "age": 68,
      "chance": "争夺",
      "gua": "苦渡",
      "jiedu": "辛苦但能过",
      "koujue": "前有恶煞后有虎 此关渡得真辛苦",
      "year": 2059,
      "yun": "临官",
    },
    {
      "age": 69,
      "chance": "付出",
      "gua": "根基",
      "jiedu": "看前面的基础",
      "koujue": "想再多闯新天地 一切成败看根基",
      "year": 2060,
      "yun": "帝旺",
    },
    {
      "age": 70,
      "chance": "名望",
      "gua": "因果",
      "jiedu": "前五年经营体现",
      "koujue": "机运当强论成败 努力回顾前五载",
      "year": 2061,
      "yun": "衰",
    },
    {
      "age": 71,
      "chance": "入库",
      "gua": "经营",
      "jiedu": "赚七分新亏三分旧",
      "koujue": "七分利来三分债 坚守经营可旺财",
      "year": 2062,
      "yun": "病",
    },
    {
      "age": 72,
      "chance": "升格",
      "gua": "层级",
      "jiedu": "关键卦，看你的层级",
      "koujue": "龙有龙形虎有步 老鼠最盛在暗处",
      "year": 2063,
      "yun": "死",
    },
    {
      "age": 73,
      "chance": "开拓",
      "gua": "未开",
      "jiedu": "按兵不动生门未开",
      "koujue": "今想还阳又何奈 只是生门打不开",
      "year": 2064,
      "yun": "绝",
    },
    {
      "age": 74,
      "chance": "转变",
      "gua": "乾坤",
      "jiedu": "天地运要有正气",
      "koujue": "抛去以往旧包袱 扭转乾坤从头来",
      "year": 2065,
      "yun": "胎",
    },
    {
      "age": 75,
      "chance": "晦暗",
      "gua": "投机",
      "jiedu": "不要投机",
      "koujue": "黑暗煞神从天降 投得短机亏双空",
      "year": 2066,
      "yun": "养",
    },
    {
      "age": 76,
      "chance": "享成",
      "gua": "再生",
      "jiedu": "天来帮助",
      "koujue": "天显神机来相助 求得重生现江湖",
      "year": 2067,
      "yun": "长生",
    },
    {
      "age": 77,
      "chance": "争夺",
      "gua": "忙碌",
      "jiedu": "打好基础不可独闯",
      "koujue": "帅喜印来将要旗 一夫当关万人敌",
      "year": 2068,
      "yun": "冠带",
    },
    {
      "age": 78,
      "chance": "付出",
      "gua": "奔驰",
      "jiedu": "不能休息要跑起来",
      "koujue": "赤兔神驹风和配 日奔千里不觉累",
      "year": 2069,
      "yun": "临官",
    },
    {
      "age": 79,
      "chance": "名望",
      "gua": "登峰",
      "jiedu": "最好的运，看你成就水平",
      "koujue": "登峰谦卑可造极 求名得名利得利",
      "year": 2070,
      "yun": "帝旺",
    },
    {
      "age": 80,
      "chance": "入库",
      "gua": "忌贪",
      "jiedu": "不可贪心",
      "koujue": "有气无力节节退 贪得无厌必自毁",
      "year": 2071,
      "yun": "衰",
    },
    {
      "age": 81,
      "chance": "升格",
      "gua": "图利",
      "jiedu": "可激流勇退变现",
      "koujue": "原封不动难相处 转变必有利可图",
      "year": 2072,
      "yun": "病",
    },
    {
      "age": 82,
      "chance": "开拓",
      "gua": "野心",
      "jiedu": "关键卦，横向跨界要慢",
      "koujue": "鹊巢易主鸠来占 野心勃勃速难成",
      "year": 2073,
      "yun": "死",
    },
    {
      "age": 83,
      "chance": "转变",
      "gua": "过时",
      "jiedu": "没机会了可转移",
      "koujue": "飞龙在天已过时 再闯天关必有失",
      "year": 2074,
      "yun": "绝",
    },
    {
      "age": 84,
      "chance": "晦暗",
      "gua": "求藏",
      "jiedu": "主动退下来低调",
      "koujue": "昏天暗地事难解 求藏容易求脱难",
      "year": 2075,
      "yun": "胎",
    },
    {
      "age": 85,
      "chance": "享成",
      "gua": "赐福",
      "jiedu": "可赐福不可解难",
      "koujue": "天官赐福在年初 喜事可遇祸不求",
      "year": 2076,
      "yun": "养",
    },
    {
      "age": 86,
      "chance": "争夺",
      "gua": "假象",
      "jiedu": "所有现象都是假的",
      "koujue": "内有困像外有机 恐是一片假象起",
      "year": 2077,
      "yun": "长生",
    },
    {
      "age": 87,
      "chance": "付出",
      "gua": "断后",
      "jiedu": "不可投资",
      "koujue": "世外桃源似奇迹 忙得前段无后期",
      "year": 2078,
      "yun": "冠带",
    },
    {
      "age": 88,
      "chance": "名望",
      "gua": "名声",
      "jiedu": "找大靠山大你72倍",
      "koujue": "机到同时运当前 二郎神边哮天犬",
      "year": 2079,
      "yun": "临官",
    },
    {
      "age": 89,
      "chance": "入库",
      "gua": "努力",
      "jiedu": "经商好从政得支持",
      "koujue": "金银财宝在地底 努力挖掘莫猜疑",
      "year": 2080,
      "yun": "帝旺",
    },
    {
      "age": 90,
      "chance": "升格",
      "gua": "栽培",
      "jiedu": "主动要求更上层",
      "koujue": "升官机会前等待 求得贵人把我栽",
      "year": 2081,
      "yun": "衰",
    },
  ],
  "zhi": 7,
  "zhiDesc": "开发型，独立刚毅，开拓力强",
  "zhiElement": "阳金",
  "zhiFull": "开发型，独立刚毅，开拓力强",
  "zhiName": "孤星",
  "zong": 27,
}
`;

exports[`jiugong v6 server engine > matches every legacy field for 'two-character name' 1`] = `
{
  "actionDesc": "",
  "actionRel": "水克土",
  "ageStar": "五鬼星(贪婪星)",
  "ageStarDesc": "是非小人，多变",
  "ageStarFull": "五鬼星（贪婪星）：掌管多变、杂乱不定，而含有是非、小人。凡岁数踫到五鬼星则很容易被是非缠住，也会被变动的磁场感应而使人不稳定。贪婪星最容易影响人之贪念及投机的欲望，故于此年很容易对五鬼行业产生兴趣，宜小心。忌贪忌投机，防是非。",
  "day": 12,
  "di": 9,
  "diWx": "水",
  "energyFull": {
    "临官": "扩大发展，主动运。发展期，忙碌升官，扩张事业版图。动力十足，创业升官看基础。这一年适合积极进取、扩大影响力，但需注意打好基础再行动。",
    "养": "吸收期，根基成长，积累培养。防投机取巧。养得助力在人际，长生贵人生两地。这一阶段需要沉淀和蓄力，为后面的突破做准备。",
    "冠带": "发挥本质最大，主动运。成熟期，自我表现，成名上位，但有抗性。这是能量最强的主动运之一，适合展现个人魅力与能力，但需注意不要过于高调而招致反弹。",
    "帝旺": "巅峰期，能量最强也最乱。高亢天助，防贪防傲。这是能量周期的顶点，最强大的运程，但也是容易失控的时期。若是帝旺还负债，后运滚滚筑高台。",
    "死": "破灭期，终止停顿，不宜妄动。脆弱易碎，外地贵人，放下执念。看似最差的运程，但死也意味着旧的事物终结，为新开始腾出空间。",
    "病": "病变期，变化与乱，需谨慎。波折考验，冷静检查。这一年容易出现各种小问题和不顺利，需要格外谨慎。身体和事业都需要定期"体检"。",
    "绝": "谷底期，空窗空洞，等待时机。结束重生，新的开始。这是能量最低点，也是转机的前夜。不宜做任何重大决策，静待时来运转。",
    "胎": "酝酿期，谷底被动，新想法萌生。新的起点，一切刚刚开始。胎是谷底也是转机，一切变量九宫管。这个时候适合学习和积累，不要急于求成。",
    "衰": "倦怠期，回收守成，防变防换。守住退守，被动运。这一年不宜大动作，适合回收整理、稳固已有成果。守成为主，不可轻举妄动。",
    "长生": "成长期，突破期，被动运。贵人相助，人和行动。这是新一轮上升的开始，适合积极行动，把握人际关系带来的机会。",
  },
  "groups": [
    {
      "ages": "1-9岁",
      "count": 9,
      "name": "巅峰运",
    },
    {
      "ages": "10-18岁",
      "count": 9,
      "name": "靠山运",
    },
    {
      "ages": "19-27岁",
      "count": 9,
      "name": "打拼运",
    },
    {
      "ages": "28-36岁",
      "count": 9,
      "name": "小得运",
    },
    {
      "ages": "37-45岁",
      "count": 9,
      "name": "追击运",
    },
    {
      "ages": "46-54岁",
      "count": 9,
      "name": "专注运",
    },
    {
      "ages": "55-63岁",
      "count": 9,
      "name": "虚名运",
    },
    {
      "ages": "64-72岁",
      "count": 9,
      "name": "功名运",
    },
    {
      "ages": "73-81岁",
      "count": 9,
      "name": "组织运",
    },
    {
      "ages": "82-90岁",
      "count": 9,
      "name": "回收运",
    },
  ],
  "ju": 4,
  "juDesc": "志向远大，求功名",
  "juFull": "【口诀】志向大海一片天，将相王侯皆不限。欲知高峰在何处？只爱王权不羡仙。

今生前程发展的指标要抱定一个宗旨，那就是要有远大的志向，求功、求名为第一志愿。想要达到高峰则要有强烈的企图心才可；若是生平无大志、只想安逸过日子或强烈的投入宗教、修道，则难有大成之象。

志向越大越好。有宗教信仰，事业就起不来；信仰越虔诚，事业越糟糕。所以局差四的人要想事业成功，就要将信仰暂时放两边，只羡王权不羡仙。基本上局差四的人，常常会有宗教信仰。

例如赵传27划，信仰密宗，结果就影响了他的事业。事业与信仰的冲突，是局差四的人一生都无可奈何的选择。",
  "lowerEnergy": "冠带",
  "lowerGua": "入库冠带",
  "lowerQi": "入库",
  "lowerStrategy": "跟随既有资源",
  "mainFunc": "主功能",
  "mainFuncDesc": "主动性强、勤劳踏实、白手起家，适合操作流年",
  "mainNum": 6,
  "marriage": "破象",
  "marriageDesc": "感情有波折",
  "mgtDesc": "迅雷型管理",
  "mgtFull": "管理指数甚高（80分），排名第三。管理细胞再生速度很快，像肝细胞一样可以再生。在管理上很容易进入状况，并且有多重变化。迅雷式的管理风格——让人有雷厉风行的感觉。是唯一可以接受行动功能呈阳性反应者的一型。名人：曹操、毛泽东。",
  "mgtScore": 80,
  "mgtType": "急风型",
  "month": 3,
  "name": "李明",
  "outerEnergy": "病",
  "outerGua": "转变病",
  "outerQi": "转变",
  "outerStrategy": "跟上沟通转型方向",
  "ren": 15,
  "renWx": "土",
  "selfEnergy": "病",
  "selfGua": "转变病",
  "selfQi": "转变",
  "selfStrategy": "跟上沟通转型方向",
  "thinkDesc": "稳定、保守，善于承接、执着、思想隐藏，较有规律性、凝聚力强、保护、家族整理型之命格（与木克土有别），爱讲道理、不太敢突破、重情面，有时过于坚持、顽固而导致人际关系之破坏。适合继承家业或长期稳定发展的事业。",
  "thinkRel": "土生金",
  "tian": 8,
  "tianWx": "金",
  "total": 15,
  "upperEnergy": "临官",
  "upperGua": "升格临官",
  "upperQi": "升格",
  "upperStrategy": "积极表现",
  "wai": 1,
  "wealthPalace": "库泄",
  "wealthPalaceDesc": "大方型，钱留不住",
  "wealthPath": "加3（机运暗财型）：受栽培，赚钱无人知",
  "wxActionFull": "",
  "wxThinkFull": "稳定、保守，善于承接、执着、思想隐藏，较有规律性、凝聚力强、保护、家族整理型之命格（与木克土有别），爱讲道理、不太敢突破、重情面，有时过于坚持、顽固而导致人际关系之破坏。适合继承家业或长期稳定发展的事业。",
  "xiangStrategy": {
    "争夺": {
      "caution": "能力见真章，竞争激烈",
      "lower": "奖惩分明防挖角",
      "outer": "守好基本盘再扩张",
      "self": "能力被考验",
      "upper": "需上层支持",
    },
    "享成": {
      "caution": "最忌得意忘形",
      "lower": "大方分享凝聚人心",
      "outer": "巩固合作关系",
      "self": "犒赏自己",
      "upper": "感恩回报",
    },
    "付出": {
      "caution": "放弃则前功尽弃",
      "lower": "短期看不到回报",
      "outer": "多付出少计较",
      "self": "不要放弃",
      "upper": "付出不求回报",
    },
    "入库": {
      "caution": "守成为上，不宜冒进",
      "lower": "给下属安全感",
      "outer": "维护老客户",
      "self": "守住老本不宜开创",
      "upper": "跟随既有资源",
    },
    "升格": {
      "caution": "升格也招嫉妒，注意人际",
      "lower": "栽培人才",
      "outer": "适宜谈判签约",
      "self": "提升自身层级",
      "upper": "积极表现",
    },
    "名望": {
      "caution": "名望双刃剑，忌骄傲",
      "lower": "以身作则",
      "outer": "建立口碑",
      "self": "打造个人品牌",
      "upper": "展现专业",
    },
    "开拓": {
      "caution": "不可冲太快，稳中求进",
      "lower": "激团队士气",
      "outer": "拓展新合作",
      "self": "开拓新领域",
      "upper": "获授权大胆前进",
    },
    "晦暗": {
      "caution": "容易被误导，高调必有是非",
      "lower": "多关心少强求",
      "outer": "不熟领域别碰",
      "self": "反思学习",
      "upper": "不宜主动请缨",
    },
    "转变": {
      "caution": "前五年经营决定转好转坏，不可独闯",
      "lower": "引导下属适应变化",
      "outer": "合作关键转折点",
      "self": "抛弃旧包袱扭转乾坤",
      "upper": "跟上沟通转型方向",
    },
  },
  "xingyunFull": "很懂得守财，财库的代表。但要追随老板不能独立作战，要去配合别人。最忌过度重利。吸财力强，先天对财有概念。性格执着专注，人际中自带吸引力，异性缘佳。",
  "xingyunName": "禄存星",
  "xuAge": 39,
  "year": 1988,
  "years": [
    {
      "age": 1,
      "chance": "升格",
      "gua": "困滩",
      "jiedu": "依靠组织不独立",
      "koujue": "龙困乾涸难伸展 养精蓄锐勿上滩",
      "year": 1988,
      "yun": "绝",
    },
    {
      "age": 2,
      "chance": "开拓",
      "gua": "作梦",
      "jiedu": "好像是机会但假象",
      "koujue": "曙光一现乍见天 就恐造成南柯梦",
      "year": 1989,
      "yun": "胎",
    },
    {
      "age": 3,
      "chance": "转变",
      "gua": "转机",
      "jiedu": "关键卦，8月后马上转",
      "koujue": "天窗一开新鲜气 仲夏过后大转机",
      "year": 1990,
      "yun": "养",
    },
    {
      "age": 4,
      "chance": "晦暗",
      "gua": "是非",
      "jiedu": "不能做暗事高调有是非",
      "koujue": "暗夜偷生异地喜 奈何回乡满城雨",
      "year": 1991,
      "yun": "长生",
    },
    {
      "age": 5,
      "chance": "享成",
      "gua": "不诚",
      "jiedu": "不诚心就没有格局",
      "koujue": "神仙护佑诚心客 枉然独闯难有格",
      "year": 1992,
      "yun": "冠带",
    },
    {
      "age": 6,
      "chance": "争夺",
      "gua": "苦渡",
      "jiedu": "辛苦但能过",
      "koujue": "前有恶煞后有虎 此关渡得真辛苦",
      "year": 1993,
      "yun": "临官",
    },
    {
      "age": 7,
      "chance": "付出",
      "gua": "根基",
      "jiedu": "看前面的基础",
      "koujue": "想再多闯新天地 一切成败看根基",
      "year": 1994,
      "yun": "帝旺",
    },
    {
      "age": 8,
      "chance": "名望",
      "gua": "因果",
      "jiedu": "前五年经营体现",
      "koujue": "机运当强论成败 努力回顾前五载",
      "year": 1995,
      "yun": "衰",
    },
    {
      "age": 9,
      "chance": "入库",
      "gua": "经营",
      "jiedu": "赚七分新亏三分旧",
      "koujue": "七分利来三分债 坚守经营可旺财",
      "year": 1996,
      "yun": "病",
    },
    {
      "age": 10,
      "chance": "升格",
      "gua": "层级",
      "jiedu": "关键卦，看你的层级",
      "koujue": "龙有龙形虎有步 老鼠最盛在暗处",
      "year": 1997,
      "yun": "死",
    },
    {
      "age": 11,
      "chance": "开拓",
      "gua": "未开",
      "jiedu": "按兵不动生门未开",
      "koujue": "今想还阳又何奈 只是生门打不开",
      "year": 1998,
      "yun": "绝",
    },
    {
      "age": 12,
      "chance": "转变",
      "gua": "乾坤",
      "jiedu": "天地运要有正气",
      "koujue": "抛去以往旧包袱 扭转乾坤从头来",
      "year": 1999,
      "yun": "胎",
    },
    {
      "age": 13,
      "chance": "晦暗",
      "gua": "投机",
      "jiedu": "不要投机",
      "koujue": "黑暗煞神从天降 投得短机亏双空",
      "year": 2000,
      "yun": "养",
    },
    {
      "age": 14,
      "chance": "享成",
      "gua": "再生",
      "jiedu": "天来帮助",
      "koujue": "天显神机来相助 求得重生现江湖",
      "year": 2001,
      "yun": "长生",
    },
    {
      "age": 15,
      "chance": "争夺",
      "gua": "忙碌",
      "jiedu": "打好基础不可独闯",
      "koujue": "帅喜印来将要旗 一夫当关万人敌",
      "year": 2002,
      "yun": "冠带",
    },
    {
      "age": 16,
      "chance": "付出",
      "gua": "奔驰",
      "jiedu": "不能休息要跑起来",
      "koujue": "赤兔神驹风和配 日奔千里不觉累",
      "year": 2003,
      "yun": "临官",
    },
    {
      "age": 17,
      "chance": "名望",
      "gua": "登峰",
      "jiedu": "最好的运，看你成就水平",
      "koujue": "登峰谦卑可造极 求名得名利得利",
      "year": 2004,
      "yun": "帝旺",
    },
    {
      "age": 18,
      "chance": "入库",
      "gua": "忌贪",
      "jiedu": "不可贪心",
      "koujue": "有气无力节节退 贪得无厌必自毁",
      "year": 2005,
      "yun": "衰",
    },
    {
      "age": 19,
      "chance": "升格",
      "gua": "图利",
      "jiedu": "可激流勇退变现",
      "koujue": "原封不动难相处 转变必有利可图",
      "year": 2006,
      "yun": "病",
    },
    {
      "age": 20,
      "chance": "开拓",
      "gua": "野心",
      "jiedu": "关键卦，横向跨界要慢",
      "koujue": "鹊巢易主鸠来占 野心勃勃速难成",
      "year": 2007,
      "yun": "死",
    },
    {
      "age": 21,
      "chance": "转变",
      "gua": "过时",
      "jiedu": "没机会了可转移",
      "koujue": "飞龙在天已过时 再闯天关必有失",
      "year": 2008,
      "yun": "绝",
    },
    {
      "age": 22,
      "chance": "晦暗",
      "gua": "求藏",
      "jiedu": "主动退下来低调",
      "koujue": "昏天暗地事难解 求藏容易求脱难",
      "year": 2009,
      "yun": "胎",
    },
    {
      "age": 23,
      "chance": "享成",
      "gua": "赐福",
      "jiedu": "可赐福不可解难",
      "koujue": "天官赐福在年初 喜事可遇祸不求",
      "year": 2010,
      "yun": "养",
    },
    {
      "age": 24,
      "chance": "争夺",
      "gua": "假象",
      "jiedu": "所有现象都是假的",
      "koujue": "内有困像外有机 恐是一片假象起",
      "year": 2011,
      "yun": "长生",
    },
    {
      "age": 25,
      "chance": "付出",
      "gua": "断后",
      "jiedu": "不可投资",
      "koujue": "世外桃源似奇迹 忙得前段无后期",
      "year": 2012,
      "yun": "冠带",
    },
    {
      "age": 26,
      "chance": "名望",
      "gua": "名声",
      "jiedu": "找大靠山大你72倍",
      "koujue": "机到同时运当前 二郎神边哮天犬",
      "year": 2013,
      "yun": "临官",
    },
    {
      "age": 27,
      "chance": "入库",
      "gua": "努力",
      "jiedu": "经商好从政得支持",
      "koujue": "金银财宝在地底 努力挖掘莫猜疑",
      "year": 2014,
      "yun": "帝旺",
    },
    {
      "age": 28,
      "chance": "升格",
      "gua": "栽培",
      "jiedu": "主动要求更上层",
      "koujue": "升官机会前等待 求得贵人把我栽",
      "year": 2015,
      "yun": "衰",
    },
    {
      "age": 29,
      "chance": "开拓",
      "gua": "失蹄",
      "jiedu": "不该投资",
      "koujue": "今日风采不如昔 四战三败马失蹄",
      "year": 2016,
      "yun": "病",
    },
    {
      "age": 30,
      "chance": "转变",
      "gua": "转世",
      "jiedu": "关键卦，看似无路却能救",
      "koujue": "山穷水尽疑无路 柳暗花明又一村",
      "year": 2017,
      "yun": "死",
    },
    {
      "age": 31,
      "chance": "晦暗",
      "gua": "乌云",
      "jiedu": "90年最不好的一年",
      "koujue": "陷进泥沼无支撑 又逢满天乌云层",
      "year": 2018,
      "yun": "绝",
    },
    {
      "age": 32,
      "chance": "享成",
      "gua": "回报",
      "jiedu": "只能被动等不能急",
      "koujue": "前种福田好乐施 感恩回报在此时",
      "year": 2019,
      "yun": "胎",
    },
    {
      "age": 33,
      "chance": "争夺",
      "gua": "额外",
      "jiedu": "不要多得",
      "koujue": "纷纷争争外相亲 多得一份苦煞心",
      "year": 2020,
      "yun": "养",
    },
    {
      "age": 34,
      "chance": "付出",
      "gua": "突围",
      "jiedu": "事业会结束",
      "koujue": "四面楚歌十面伏 突出重围江东哭",
      "year": 2021,
      "yun": "长生",
    },
    {
      "age": 35,
      "chance": "名望",
      "gua": "名望",
      "jiedu": "靠知名度，出名七分留三分",
      "koujue": "威震九洲是二爷 光芒四射怕引蝶",
      "year": 2022,
      "yun": "冠带",
    },
    {
      "age": 36,
      "chance": "入库",
      "gua": "昙花",
      "jiedu": "昙花一现要低调",
      "koujue": "拨得云开见月圆 就怕好景昙花现",
      "year": 2023,
      "yun": "临官",
    },
    {
      "age": 37,
      "chance": "升格",
      "gua": "强敌",
      "jiedu": "上去很难还有人拖后腿",
      "koujue": "更上层楼已艰辛 奈何又现程咬金",
      "year": 2024,
      "yun": "帝旺",
    },
    {
      "age": 38,
      "chance": "开拓",
      "gua": "退隐",
      "jiedu": "要退后放下修身养性",
      "koujue": "缓缓衰退名难再 不如修道或吃斋",
      "year": 2025,
      "yun": "衰",
    },
    {
      "age": 39,
      "chance": "转变",
      "gua": "不定",
      "jiedu": "很不稳定的运",
      "koujue": "多云阵阵不定天 早败年底晚三年",
      "year": 2026,
      "yun": "病",
    },
    {
      "age": 40,
      "chance": "晦暗",
      "gua": "暗渡",
      "jiedu": "不能明着做事要低调",
      "koujue": "暗渡陈仓免遭殃 恶名昭彰在本乡",
      "year": 2027,
      "yun": "死",
    },
    {
      "age": 41,
      "chance": "享成",
      "gua": "贵人",
      "jiedu": "关键卦，有贵人",
      "koujue": "我本无心再期待 怎知贵人要安排",
      "year": 2028,
      "yun": "绝",
    },
    {
      "age": 42,
      "chance": "争夺",
      "gua": "流产",
      "jiedu": "不要去抢，一半就掉",
      "koujue": "烦烦杂杂事生机 要抢必有胎落地",
      "year": 2029,
      "yun": "胎",
    },
    {
      "age": 43,
      "chance": "付出",
      "gua": "空欢",
      "jiedu": "被动接来空欢喜",
      "koujue": "处处天象皆是虚 接得召来空欢喜",
      "year": 2030,
      "yun": "养",
    },
    {
      "age": 44,
      "chance": "名望",
      "gua": "小得",
      "jiedu": "适合局3，捡小利",
      "koujue": "天上星星仙女华 捡到小利得小发",
      "year": 2031,
      "yun": "长生",
    },
    {
      "age": 45,
      "chance": "入库",
      "gua": "抑制",
      "jiedu": "要压抑处理好上层",
      "koujue": "下了金牌压岳飞 冲天之志要收回",
      "year": 2032,
      "yun": "冠带",
    },
    {
      "age": 46,
      "chance": "升格",
      "gua": "兼差",
      "jiedu": "可兼差不要去转",
      "koujue": "机会出现有两三 宁可双兼不要转",
      "year": 2033,
      "yun": "临官",
    },
    {
      "age": 47,
      "chance": "开拓",
      "gua": "无果",
      "jiedu": "不要白手起家守成",
      "koujue": "一片荒凉无边际 种得花果古来稀",
      "year": 2034,
      "yun": "帝旺",
    },
    {
      "age": 48,
      "chance": "转变",
      "gua": "外乡",
      "jiedu": "停顿时往外发展",
      "koujue": "此运不佳会倦怠 往外发展两冬期",
      "year": 2035,
      "yun": "衰",
    },
    {
      "age": 49,
      "chance": "晦暗",
      "gua": "多病",
      "jiedu": "相当不好很难渡过",
      "koujue": "体弱多病真无奈 雪上加霜真无奈",
      "year": 2036,
      "yun": "病",
    },
    {
      "age": 50,
      "chance": "享成",
      "gua": "机运",
      "jiedu": "关键卦，人际好有机会",
      "koujue": "机运贵人南与西 尊上亲下做几许",
      "year": 2037,
      "yun": "死",
    },
    {
      "age": 51,
      "chance": "争夺",
      "gua": "忠诚",
      "jiedu": "要光荣的死可结束",
      "koujue": "人生自古谁无死 留取丹心照汗青",
      "year": 2038,
      "yun": "绝",
    },
    {
      "age": 52,
      "chance": "付出",
      "gua": "小利",
      "jiedu": "有人造就可得小利",
      "koujue": "活气出现暗显机 少接无伤造有力",
      "year": 2039,
      "yun": "胎",
    },
    {
      "age": 53,
      "chance": "名望",
      "gua": "两仪",
      "jiedu": "九年一半好一半不好",
      "koujue": "阴阳两仪交互替 年初不顺年冬吉",
      "year": 2040,
      "yun": "养",
    },
    {
      "age": 54,
      "chance": "入库",
      "gua": "正财",
      "jiedu": "慢慢赚在里面赚",
      "koujue": "暗暗吸收缓缓落 阁内成长赚得多",
      "year": 2041,
      "yun": "长生",
    },
    {
      "age": 55,
      "chance": "升格",
      "gua": "升官",
      "jiedu": "帮到别人得到提升",
      "koujue": "盗得玉玺助帝王 获得兵权又加冠",
      "year": 2042,
      "yun": "冠带",
    },
    {
      "age": 56,
      "chance": "开拓",
      "gua": "追击",
      "jiedu": "要追上去主动去追",
      "koujue": "春雨绵绵偶晴天 乘胜追击在当前",
      "year": 2043,
      "yun": "临官",
    },
    {
      "age": 57,
      "chance": "转变",
      "gua": "实虚",
      "jiedu": "前实后虚",
      "koujue": "高峰转变有时机 前段当实后段虚",
      "year": 2044,
      "yun": "帝旺",
    },
    {
      "age": 58,
      "chance": "晦暗",
      "gua": "衰退",
      "jiedu": "越到年底越要注意",
      "koujue": "有人说我是鳌拜 气数将近年底来",
      "year": 2045,
      "yun": "衰",
    },
    {
      "age": 59,
      "chance": "享成",
      "gua": "变节",
      "jiedu": "拿不到更多可能变节",
      "koujue": "锦上添花难封侯 变节之心已难收",
      "year": 2046,
      "yun": "病",
    },
    {
      "age": 60,
      "chance": "争夺",
      "gua": "无依",
      "jiedu": "被动低调",
      "koujue": "曾经风云功与过 今恐贬官又枷锁",
      "year": 2047,
      "yun": "死",
    },
    {
      "age": 61,
      "chance": "付出",
      "gua": "静观",
      "jiedu": "安静观望不闯新",
      "koujue": "不急不忙静观望 守住旧业胜新关",
      "year": 2048,
      "yun": "绝",
    },
    {
      "age": 62,
      "chance": "名望",
      "gua": "空相",
      "jiedu": "太极运，乱抢乱得一场空",
      "koujue": "一场好景似源头 竹篮打水一场空",
      "year": 2049,
      "yun": "胎",
    },
    {
      "age": 63,
      "chance": "入库",
      "gua": "守成",
      "jiedu": "守成",
      "koujue": "问说诸事如何办 只言守成可平安",
      "year": 2050,
      "yun": "养",
    },
    {
      "age": 64,
      "chance": "升格",
      "gua": "无尾",
      "jiedu": "做什么都没有结果",
      "koujue": "呱呱落地袍与冠 定是溥仪或刘禅",
      "year": 2051,
      "yun": "长生",
    },
    {
      "age": 65,
      "chance": "开拓",
      "gua": "破财",
      "jiedu": "换就没机会",
      "koujue": "看似一片好地带 左挖右垦总破财",
      "year": 2052,
      "yun": "冠带",
    },
    {
      "age": 66,
      "chance": "转变",
      "gua": "翻身",
      "jiedu": "关键卦，可被动换工作",
      "koujue": "鲤鱼龙门新身换 除旧布新得满贯",
      "year": 2053,
      "yun": "临官",
    },
    {
      "age": 67,
      "chance": "晦暗",
      "gua": "遭忌",
      "jiedu": "强出头势必遭忌",
      "koujue": "运上大道气落地 亢龙有悔遭人忌",
      "year": 2054,
      "yun": "帝旺",
    },
    {
      "age": 68,
      "chance": "享成",
      "gua": "短发",
      "jiedu": "换了三年也无结果",
      "koujue": "老怕空名利不来 中年达官无三载",
      "year": 2055,
      "yun": "衰",
    },
    {
      "age": 69,
      "chance": "争夺",
      "gua": "赔本",
      "jiedu": "主动投资必输",
      "koujue": "安排设计来招亲 赔了夫人又折兵",
      "year": 2056,
      "yun": "病",
    },
    {
      "age": 70,
      "chance": "付出",
      "gua": "放弃",
      "jiedu": "不要放弃，主动都输",
      "koujue": "放弃一切觅新路 怎知此步会大输",
      "year": 2057,
      "yun": "死",
    },
    {
      "age": 71,
      "chance": "名望",
      "gua": "虚名",
      "jiedu": "九年就是虚名",
      "koujue": "有人送终有人拱 徒有虚名一场空",
      "year": 2058,
      "yun": "绝",
    },
    {
      "age": 72,
      "chance": "入库",
      "gua": "套牢",
      "jiedu": "任何事都不要做",
      "koujue": "秋瑟过后寒冬至 自投罗网难逃脱",
      "year": 2059,
      "yun": "胎",
    },
    {
      "age": 73,
      "chance": "升格",
      "gua": "贪心",
      "jiedu": "现象是假的",
      "koujue": "气压下降非真迹 贪心不足撑破皮",
      "year": 2060,
      "yun": "养",
    },
    {
      "age": 74,
      "chance": "开拓",
      "gua": "奋斗",
      "jiedu": "能得名难得财",
      "koujue": "闻鸡起舞见祖荻 图强有成靠自己",
      "year": 2061,
      "yun": "长生",
    },
    {
      "age": 75,
      "chance": "转变",
      "gua": "追损",
      "jiedu": "还是虚名一年白忙",
      "koujue": "日正当中我当红 夸父追日饮长空",
      "year": 2062,
      "yun": "冠带",
    },
    {
      "age": 76,
      "chance": "晦暗",
      "gua": "盗取",
      "jiedu": "心里有邪念没结果",
      "koujue": "寒夜深深行急急 若非盗取亦投机",
      "year": 2063,
      "yun": "临官",
    },
    {
      "age": 77,
      "chance": "享成",
      "gua": "奇迹",
      "jiedu": "关键卦，求名不求利",
      "koujue": "不管机会排第几 此去前程有奇迹",
      "year": 2064,
      "yun": "帝旺",
    },
    {
      "age": 78,
      "chance": "争夺",
      "gua": "能力",
      "jiedu": "能看出一个人的能力",
      "koujue": "机会是好也是坏 看我贤能或庸才",
      "year": 2065,
      "yun": "衰",
    },
    {
      "age": 79,
      "chance": "付出",
      "gua": "断足",
      "jiedu": "朋友找你合作不要",
      "koujue": "交错朋友失双足 借问足下可帮谁",
      "year": 2066,
      "yun": "病",
    },
    {
      "age": 80,
      "chance": "名望",
      "gua": "功名",
      "jiedu": "奇迹短暂求名不求利",
      "koujue": "日月同光有奇迹 但求功名不求利",
      "year": 2067,
      "yun": "死",
    },
    {
      "age": 81,
      "chance": "入库",
      "gua": "包袱",
      "jiedu": "所有不同都是引狼入室",
      "koujue": "引狼入室变包袱 沉迷最爱必大输",
      "year": 2068,
      "yun": "绝",
    },
    {
      "age": 82,
      "chance": "升格",
      "gua": "承接",
      "jiedu": "旧货可接新货不行",
      "koujue": "承接一切看前例 若是二胎必大吉",
      "year": 2069,
      "yun": "胎",
    },
    {
      "age": 83,
      "chance": "开拓",
      "gua": "惊险",
      "jiedu": "不好的运慢慢来",
      "koujue": "苦果徐徐布满天 渡得有惊却无险",
      "year": 2070,
      "yun": "养",
    },
    {
      "age": 84,
      "chance": "转变",
      "gua": "苦成",
      "jiedu": "前面辛苦后面成长",
      "koujue": "辛苦成长各参半 更上层楼在后段",
      "year": 2071,
      "yun": "长生",
    },
    {
      "age": 85,
      "chance": "晦暗",
      "gua": "过气",
      "jiedu": "机会没了，属下易走光",
      "koujue": "黑夜魑魅飘忽忽 一将功成万骨枯",
      "year": 2072,
      "yun": "冠带",
    },
    {
      "age": 86,
      "chance": "享成",
      "gua": "祖德",
      "jiedu": "考验人际关系",
      "koujue": "二品官爵诸君要 祖上有德贵人罩",
      "year": 2073,
      "yun": "临官",
    },
    {
      "age": 87,
      "chance": "争夺",
      "gua": "接替",
      "jiedu": "关键卦，后面十年大运",
      "koujue": "加官进爵是天意 死了君王我接替",
      "year": 2074,
      "yun": "帝旺",
    },
    {
      "age": 88,
      "chance": "付出",
      "gua": "回收",
      "jiedu": "前面好最后可得利",
      "koujue": "此段回收财官利 持续努力会升级",
      "year": 2075,
      "yun": "衰",
    },
    {
      "age": 89,
      "chance": "名望",
      "gua": "良臣",
      "jiedu": "找到好人才不能独闯",
      "koujue": "众星拱月可上任 左右护法得良臣",
      "year": 2076,
      "yun": "病",
    },
    {
      "age": 90,
      "chance": "入库",
      "gua": "断头",
      "jiedu": "强行出头一定有事",
      "koujue": "坚守资源在本洲 强行出击必断头",
      "year": 2077,
      "yun": "死",
    },
  ],
  "zhi": 5,
  "zhiDesc": "储存型，稳定守成，适合管财",
  "zhiElement": "阳土",
  "zhiFull": "储存型，稳定守成，适合管财",
  "zhiName": "库星",
  "zong": 15,
}
`;
